Concerto do bug na qualidade. usando  overflow: auto; Finalizei a pagina Sobre.

--- a/CSS/sobre.css
+++ b/CSS/sobre.css
@@ -2,3 +2,21 @@
   background: url("../IMG/bg-sobre.jpg") no-repeat center;
   background-size: cover;
 }
+.missao_sobre {
+  padding: 60px 0;
+}
+.missao_sobre p {
+  font-size: 18px;
+  line-height: 25px;
+  margin-bottom: 1em;
+  padding-right: 60px;
+}
+.missao_sobre ul li {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.foto-equipe {
+  padding: 20px 0;
+}
